# ChangeLog for dev-libs/gmime
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/gmime/ChangeLog,v 1.92 2009/08/31 21:52:49 eva Exp $

*gmime-2.4.8 (31 Aug 2009)

  31 Aug 2009; Gilles Dartiguelongue <eva@gentoo.org> +gmime-2.2.24.ebuild,
  +gmime-2.4.8.ebuild:
  Version bump. Should fix cross-compilation issues.

*gmime-2.2.24 (31 Aug 2009)

  31 Aug 2009; Gilles Dartiguelongue <eva@gentoo.org> +gmime-2.2.24.ebuild:
  Version bump. Should fix cross-compilation issues.

  28 Aug 2009; Tobias Klausmann <klausman@gentoo.org> gmime-2.4.7.ebuild:
  Stable on alpha, bug #278718

*gmime-2.4.7 (16 May 2009)

  16 May 2009; Gilles Dartiguelongue <eva@gentoo.org> +gmime-2.4.7.ebuild:
  Bump to 2.4.7.

*gmime-2.4.6 (09 Apr 2009)

  09 Apr 2009; Gilles Dartiguelongue <eva@gentoo.org> +gmime-2.4.6.ebuild:
  Bump to 2.4.6. A nice load of fixes.

  04 Apr 2009; Markus Meier <maekke@gentoo.org> gmime-2.4.3.ebuild:
  amd64/x86 stable, bug #234305

  27 Mar 2009; Brent Baude <ranger@gentoo.org> gmime-2.4.3.ebuild:
  Marking gmime-2.4.3 ppc stable for bug 234305

  26 Jan 2009; Peter Alfredsen <loki_val@gentoo.org> gmime-2.2.23.ebuild:
  Fix bug 256470. To run eautoreconf, we need gtk-doc-am.

  26 Jan 2009; Peter Alfredsen <loki_val@gentoo.org>
  +files/gmime-2.2.23-sign-assembly.patch, +files/gmime-sharp.snk,
  gmime-2.2.23.ebuild:
  Non-maintainer-commit: Fix bug 248657. Import signing key from upstream,
  fix assemblyinfo.cs and Makefile.am to actually sign the assembly.

  24 Dec 2008; Gilles Dartiguelongue <eva@gentoo.org> -gmime-2.2.3.ebuild,
  -gmime-2.2.11.ebuild, -gmime-2.2.17.ebuild, -gmime-2.2.22.ebuild,
  -gmime-2.4.1.ebuild, -gmime-2.4.2.ebuild:
  clean up old revisions.

  01 Dec 2008; Jeroen Roovers <jer@gentoo.org> gmime-2.2.23.ebuild:
  Stable for HPPA (bug #247633).

  25 Nov 2008; Raúl Porcel <armin76@gentoo.org> gmime-2.2.23.ebuild:
  alpha/ia64/sparc stable wrt #247633
