@@ -5,10 +5,12 @@ DIST gmime-2.4.3.tar.bz2 853191 RMD160 d60e225635a985f34376743096c22b405c4c0dec 
 DIST gmime-2.4.6.tar.bz2 831230 RMD160 6ee9fe76335ae1ddd7919af8b8a13549f5e0aa72 SHA1 8b4fac420524a03a1023c8cffc20548ebcf9a1bc SHA256 32bf7465c3cdc42222fee8a58f248a53fe918f9b801175b1f566ba756a6095f4
 DIST gmime-2.4.7.tar.bz2 836189 RMD160 e8da79e5caab599811dd521ac700f96ccc8637e9 SHA1 165b91f889c22fd4c268ad3bf7a614e4f85b653e SHA256 bf75214018bb1ae82c797e79d52db2c37a8d3d9f002a737f12960fa2b1022dbd
 DIST gmime-2.4.8.tar.bz2 814196 RMD160 63eed9be80933eb72d07e8ad44d50587d6b2cab2 SHA1 16c4facc0b7db7e72b7a7b063fd7263bfcca96a1 SHA256 af79e5aa0e96d37dc00c4c023252ba8b08b38d88e2cc47e8b2056429ab442f15
+DIST gmime-2.4.9.tar.bz2 837767 RMD160 78bea2b0443f5f9c4036ef6e712ef3d0d423659a SHA1 be7dcc89e0dbd409c491e06ba228df278627f378 SHA256 74ace088c6892da131fcc57f1ed4b5b802ac8f279aea1fed264b7f026af3b255
 EBUILD gmime-2.2.23.ebuild 2002 RMD160 7b1f435fb5c00455607f3cff025da36cc3e0d354 SHA1 1b1a75255ba6bc82fc43471ca2f1c031d36d1a5f SHA256 f230850b9aa57e90647f297bd559deb65de7a8bc20ae8f62990a7c743bfa9f2d
 EBUILD gmime-2.4.3.ebuild 2164 RMD160 d91acce5d72a756962f6d4bc0817e53f73c9ec6a SHA1 4acc7c950b93b5cfd6b646f1d8d7cf2cd53d1278 SHA256 723d9aa021d6d352dc9f5a4499d057f7793a9f93ab41ebadd01cc26755773f24
 EBUILD gmime-2.4.6.ebuild 2157 RMD160 f74dc1a6630e3d841ba3671f3acd8b071328accf SHA1 0f606e002a477ee3b78d813c87156172faff0766 SHA256 d8c6843f1138d587a9479c0d1f6603cfb6f5fd13e16aa058ff0e49d060c8c532
 EBUILD gmime-2.4.7.ebuild 2162 RMD160 11bd6bc2dba54160d114a6683c4b4a31e6a4c869 SHA1 47bdd113a28234cef5e403afc7fbef658324e9a3 SHA256 7d245ebd438d5b9239e51020d38414ebe3f4e808e004494f47b90de381898fbb
 EBUILD gmime-2.4.8.ebuild 2157 RMD160 170c2b8bd4d5570b7f373ab09752260e3ffe179b SHA1 fabd1b7dbf547ce6c5aad7a9f7cb91b767142f5f SHA256 5dcaadfba6286be4884fde9ff3e89a44c367c78e9c52bf2fe848c4e4421c554f
-MISC ChangeLog 13379 RMD160 c07026d4ea3ef061efec5169647514e7ae2bcc6a SHA1 1e208e25c904507964b053febae8799d70c69298 SHA256 99e78a124b430392646e6349b5b8b92d4779a318128c3b4b0541ee0d0fc21e31
+EBUILD gmime-2.4.9.ebuild 2157 RMD160 824c26256a5b94442c534bce23b4ee2d4d8f9ff3 SHA1 0941dc96fedc41b6c10c07f93248a8f77b1c6b55 SHA256 7c0c98442122b80a1e03a0fa6c2240c790e04453f855d90b070505145c1b420b
+MISC ChangeLog 13527 RMD160 ead23ba662b965e95fbc3acf33bf2858cc5bbc03 SHA1 3ad013d0cea63998bba2f6ff42586d6cf38a4006 SHA256 d2dc5ca6351519046bf8610ab529011439fd4a5f325cfd3ccd6edbadaccbcdaf
 MISC metadata.xml 180 RMD160 2aa394e2e4d9898608b2c58ce6db543d7677d3ae SHA1 82aae8bdb49fa61e2fcbb48de7c1f8e1342e8ae0 SHA256 e5c6804ed9ff8173cc88618d3443a09c85599a23c1eca85c5c6609b6de351f21
